# Morii_bot

./: README.md  anime_time.py  bot.py  docker-compose.yml  httpx1.py  main.py  pic.py  pyproject.toml  sendmessage.py  未命名.ipynb
.devcontainer/: devcontainer.json  docker-compose.yml
bots/3237855048/: device.json
bots/3237855048/cache/: account.secrets  servers.json
config/Console/: AutoLogin.yml
config/net.mamoe.mirai-api-http/: setting.yml
modules/: clock.py  hentai.py  leetcode.py  nud.py  search.py
modules/ArkCurit/: __init__.py  data.py  draw_recruit_image.py  recruit_calc.py
modules/ArkNews/: __init__.py  get_news.py  pushed_list.json
modules/Arkguess/: __init__.py  data.py
modules/Arkguess/data/: 12F_中文.silk  12F_日文.silk  Castle-3_日文.silk  Lancet-2_日文.silk  THRM-EX_日文.silk  W_日文.silk  data.json  临光_中文.silk  临光_日文.silk  乌有_日文.silk  九色鹿_联动.silk  亚叶_日文.silk  令_中文.silk  令_方言.silk  令_日文.silk  伊桑_日文.silk  伊芙利特_日文.silk  假日威龙陈_中文.silk  假日威龙陈_日文.silk  傀影_中文.silk  傀影_日文.silk  克洛丝_中文.silk  克洛丝_日文.silk  凛冬_中文.silk  凛冬_日文.silk  凯尔希_日文.silk  初雪_中文.silk  初雪_日文.silk  刻俄柏_日文.silk  刻刀_日文.silk  华法琳_中文.silk  华法琳_日文.silk  卡夫卡_日文.silk  卡涅利安_日文.silk  卡缇_中文.silk  卡缇_日文.silk  卡达_日文.silk  古米_中文.silk  古米_日文.silk  可颂_中文.silk  (+287 more)
utils/: TimeTool.py  ocr.py  strings.py  text2image.py
utils/text_engine/: util.py
